--- a/.github/workflows/keep-render-awake.yml
+++ b/.github/workflows/keep-render-awake.yml
@@ -3,10 +3,11 @@ name: keep-render-awake
 on:
   schedule:
     - cron: "*/10 * * * *"
+  workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
       - name: Ping Render backend
-        run: curl -s https://backend-mbht.onrender.com > /dev/null || true
+        run: curl -fsS https://backend-mbht.onrender.com > /dev/null
